data/collection/fixes/descriptions/scala/dotty-5296
```scala
class Test {
  Test.x = 2
}

object Test {
  private[this] var x = 1
}
```

The program is not rejected by `dotc`. Here is `scalac`'s output on the other hand:

```
> scalac Test.scala
Test.scala:45: error: value x is not a member of object Test
  Test.x = 2
       ^
one error found
```